--- a/projeto 1.csproj
+++ b/projeto 1.csproj
@@ -130,6 +130,12 @@
     <Compile Include="FrmPecas.Designer.cs">
       <DependentUpon>FrmPecas.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPesquisas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPesquisas.Designer.cs">
+      <DependentUpon>FrmPesquisas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPecas.resx">
       <DependentUpon>FrmPecas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmPesquisas.resx">
+      <DependentUpon>FrmPesquisas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
